_atmel_cmsis_dir = "//external/Atmel-CMSIS/CMSIS-Atmel/CMSIS/Device/ATMEL/"
_samd_core_dir = "//external/ArduinoCore-samd/"
_cmsis_dir = "//external/CMSIS/"

config("atmel_cmsis_config") {
  include_dirs = [
    "${_atmel_cmsis_dir}",
    "${_atmel_cmsis_dir}/samd21/include",
  ]
}

config("arduino_samd_core_config") {
  include_dirs = [
    "${_samd_core_dir}/variants/circuitplay/",
    "${_samd_core_dir}/cores/arduino/",
    "${_cmsis_dir}/CMSIS/Include/",
  ]
}

source_set("arduino_samd_core") {
  defines = [
    "CRYSTALLESS",
    "__SAMD21G18A__",
  ]

  # configs -= [ "//build:strict_warning" ]
  sources = [
    "${_samd_core_dir}/bootloaders/zero/board_startup.c",
    "${_samd_core_dir}/cores/arduino/startup.c",
  ]
  configs += [
    ":arduino_samd_core_config",
    ":atmel_cmsis_config",
  ]
}

executable("main") {
  _linker_script = rebase_path(
          "${_samd_core_dir}/variants/circuitplay/linker_scripts/gcc/flash_with_bootloader.ld",
          root_build_dir)
  ldflags = [ "-T${_linker_script}" ]
  sources = [ "main.c" ]
  configs += [
    ":atmel_cmsis_config",
    ":arduino_samd_core_config",
  ]
  deps = [ ":arduino_samd_core" ]
}
