import("//external/arduino_core.gni")
import("//external/atmel_cmsis.gni")

atmel_cmsis_cfg("samd21_config") {
  chip_family = "samd21"
}

arduino_firmware("blinky") {
  variant = "circuitplay"
  defines = [
    "CRYSTALLESS",
    "__SAMD21G18A__",
    "F_CPU=48000000L",
    "ARDUINO=10602",
    "ARDUINO_SAMD_ZERO",
    "ARDUINO_ARCH_SAMD",
    "USBCON",
    "USB_VID=0x2341",
    "USB_PID=0x004d",
    "USB_MANUFACTURER=\"Arduino LLC\"",
    "USB_PRODUCT=\"Arduino Zero\"",
  ]
  configs = [
    ":samd21_config",
    "//external:arm_cmsis_core_config",
  ]

  sources = [ "main.c" ]
}
